--- a/index.html
+++ b/index.html
@@ -3,213 +3,92 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Planificación Taller 1er Año - Editable 2026</title>
+  <title>Planificación Taller 1er Año - 2026</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 15px; background: #f9f9f9; font-size: 13px; line-height: 1.3; }
-    header { text-align: center; margin-bottom: 20px; }
-    h1 { color: #d35400; font-size: 1.8em; }
-    .controls { margin: 15px 0; text-align: center; }
-    select, button { font-size: 0.95em; padding: 6px 12px; margin: 4px; cursor: pointer; }
-    .container { max-width: 100%; overflow-x: auto; }
-    .meses { display: grid; grid-template-columns: repeat(auto-fit, minmax(480px, 1fr)); gap: 25px; }
-    .mes { background: white; border: 1px solid #ddd; border-radius: 6px; padding: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.08); }
-    .mes h2 { text-align: center; color: #d35400; margin: 0 0 8px; font-size: 1.3em; }
-    .mini-cal { font-size: 0.85em; text-align: center; margin-bottom: 8px; color: #555; }
-    table { width: 100%; border-collapse: collapse; table-layout: fixed; font-size: 0.82em; }
-    th, td { border: 1px solid #bbb; padding: 5px 7px; text-align: left; vertical-align: top; min-height: 80px; position: relative; word-wrap: break-word; }
-    th { background: #27ae60; color: white; text-align: center; font-weight: bold; font-size: 0.8em; padding: 6px 4px; }
-    td[contenteditable="true"] { cursor: text; }
-    td[contenteditable="true"]:focus { outline: 2px solid #3498db; background: #f0f8ff; }
-    select.color-picker { position: absolute; top: 2px; right: 2px; font-size: 0.65em; padding: 1px 3px; z-index: 5; background: white; border: 1px solid #aaa; border-radius: 3px; }
-
+    body { font-family: Arial, sans-serif; margin: 20px; background: #f9f9f9; }
+    header { text-align: center; margin-bottom: 30px; }
+    h1 { color: #d35400; }
+    .mes { margin-bottom: 40px; page-break-inside: avoid; }
+    .mes h2 { text-align: center; color: #d35400; margin-bottom: 10px; }
+    .mini-cal { font-size: 0.9em; text-align: center; margin-bottom: 10px; color: #555; }
+    table { width: 100%; border-collapse: collapse; font-size: 0.85em; table-layout: fixed; }
+    th, td { border: 1px solid #ccc; padding: 6px; vertical-align: top; text-align: left; height: 90px; }
+    th { background: #27ae60; color: white; text-align: center; font-weight: bold; }
     .feriado { background: #e74c3c; color: white; font-weight: bold; }
     .ajuste { background: #f39c12; color: white; }
     .practica { background: #d35400; color: white; }
     .pia { background: #9b59b6; color: white; }
     .apoyo { background: #3498db; color: white; }
     .receso { background: #27ae60; color: white; font-weight: bold; }
-    .hojalateria { background: #e67e22; color: white; }
-    .carpinteria { background: #8e44ad; color: white; }
-
-    .zoom-container { transform-origin: top left; transition: transform 0.3s; }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>Planificación Taller 1er Año</h1>
-  <div class="controls">
-    <label>Año: 
-      <select id="anioSelect">
-        <option value="2025">2025</option>
-        <option value="2026" selected>2026</option>
-        <option value="2027">2027</option>
-      </select>
-    </label>
-    <button onclick="zoomIn()">Zoom +</button>
-    <button onclick="zoomOut()">Zoom -</button>
-    <button onclick="restaurarSelects()">Restaurar menús</button>
-    <button onclick="guardarLocal()">Guardar local</button>
-    <button onclick="descargar()">Descargar HTML</button>
-  </div>
+  <h1>Planificación Taller 1er Año - 2026</h1>
 </header>
 
-<div class="zoom-container" id="zoomContainer" style="transform: scale(0.85);">
-  <div class="container">
-    <div class="meses" id="meses"></div>
-  </div>
+<div class="mes">
+  <h2>Marzo 2026</h2>
+  <div class="mini-cal">Mini-calendario Marzo 2026</div>
+  <table>
+    <thead>
+      <tr>
+        <th>DOMINGO</th><th>LUNES</th><th>MARTES</th><th>MIÉRCOLES</th><th>JUEVES</th><th>VIERNES</th><th>SÁBADO</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td></td>
+        <td class="inicio">2<br>Inicio clases secundaria<br>Presentación</td>
+        <td class="ajuste" rowspan="2">3-4<br>-Ajuste-<br>Teoría y Metrología</td>
+        <td></td><td></td><td></td><td></td>
+      </tr>
+      <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+      <tr>
+        <td class="apoyo" colspan="7" rowspan="3">Periodo de Apoyo y Acompañamiento</td>
+      </tr>
+      <tr></tr><tr></tr>
+      <tr>
+        <td></td>
+        <td class="practica" rowspan="2">9-10<br>Corte Pieza Teoría y Metrología</td>
+        <td class="practica" rowspan="2">11-12<br>Corte Pieza Limado C1</td>
+        <td></td><td></td><td></td><td></td>
+      </tr>
+      <tr></tr>
+      <tr>
+        <td></td>
+        <td class="feriado">24<br>Día Nacional de la Memoria</td>
+        <td class="practica">25<br>Limado C1 Teoría y Metrología</td>
+        <td class="practica" rowspan="2">26-27<br>Limado C2 Verif. perp.</td>
+        <td></td><td></td><td></td>
+      </tr>
+      <tr></tr>
+    </tbody>
+  </table>
 </div>
 
-<script>
-let zoomLevel = 0.85;
-const zoomContainer = document.getElementById('zoomContainer');
-const mesesEl = document.getElementById('meses');
+<div class="mes">
+  <h2>Julio 2026</h2>
+  <div class="mini-cal">Mini-calendario Julio 2026</div>
+  <table>
+    <thead>
+      <tr>
+        <th>DOMINGO</th><th>LUNES</th><th>MARTES</th><th>MIÉRCOLES</th><th>JUEVES</th><th>VIERNES</th><th>SÁBADO</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td colspan="7" class="pia" rowspan="2">PIA / EMI (pre-receso)</td>
+      </tr>
+      <tr></tr>
+      <tr>
+        <td colspan="7" class="receso" rowspan="5">20 al 31 julio - Receso Escolar</td>
+      </tr>
+      <tr></tr><tr></tr><tr></tr><tr></tr>
+    </tbody>
+  </table>
+</div>
 
-function zoomIn() { zoomLevel += 0.1; zoomContainer.style.transform = `scale(${zoomLevel})`; }
-function zoomOut() { zoomLevel = Math.max(0.5, zoomLevel - 0.1); zoomContainer.style.transform = `scale(${zoomLevel})`; }
-
-function agregarSelect(td) {
-  if (!td.querySelector('select.color-picker')) {
-    const sel = document.createElement('select');
-    sel.className = 'color-picker';
-    sel.innerHTML = `
-      <option value="">Color</option>
-      <option value="ajuste">Ajuste</option>
-      <option value="practica">Práctica</option>
-      <option value="pia">PIA</option>
-      <option value="apoyo">Apoyo</option>
-      <option value="receso">Receso</option>
-      <option value="feriado">Feriado</option>
-    `;
-    sel.onchange = () => td.className = sel.value;
-    td.appendChild(sel);
-  }
-}
-
-function restaurarSelects() {
-  document.querySelectorAll('td[contenteditable="true"]').forEach(td => agregarSelect(td));
-  alert('Menús de color restaurados');
-}
-
-function generarCalendario(anio) {
-  mesesEl.innerHTML = '';
-
-  const mesesNombres = ["Enero","Febrero","Marzo","Abril","Mayo","Junio","Julio","Agosto","Septiembre","Octubre","Noviembre","Diciembre"];
-
-  for (let m = 0; m < 12; m++) {
-    const mesDiv = document.createElement('div');
-    mesDiv.className = 'mes';
-    mesDiv.innerHTML = `<h2>${mesesNombres[m]} ${anio}</h2>
-      <div class="mini-cal">Mini-calendario ${mesesNombres[m]} ${anio}</div>`;
-
-    const table = document.createElement('table');
-    table.innerHTML = `<thead><tr>
-      <th>DOMINGO</th><th>LUNES</th><th>MARTES</th><th>MIÉRCOLES</th><th>JUEVES</th><th>VIERNES</th><th>SÁBADO</th>
-    </tr></thead><tbody></tbody>`;
-
-    const tbody = table.querySelector('tbody');
-
-    // Marzo - fiel a tu PDF (con rowspan para bloques)
-    if (mesesNombres[m] === "Marzo") {
-      tbody.innerHTML = `
-        <tr>
-          <td></td>
-          <td contenteditable="true" class="inicio">2<br>Inicio clases secundaria<br>Presentación</td>
-          <td contenteditable="true" class="ajuste" rowspan="2">3-4<br>-Ajuste-<br>Teoría y Metrología</td>
-          <td></td><td></td><td></td><td></td>
-        </tr>
-        <tr><td></td><td></td><td></td><td></td><td></td><td></td></tr>
-        <tr>
-          <td contenteditable="true" class="apoyo" colspan="7" rowspan="3">Periodo de Apoyo y Acompañamiento</td>
-        </tr>
-        <tr></tr><tr></tr>
-        <tr>
-          <td></td>
-          <td contenteditable="true" class="practica" rowspan="2">9-10<br>Corte Pieza<br>Teoría y Metrología</td>
-          <td contenteditable="true" class="practica" rowspan="2">11-12<br>Corte Pieza<br>Limado C1</td>
-          <td></td><td></td><td></td><td></td>
-        </tr>
-        <tr></tr>
-        <tr>
-          <td></td>
-          <td contenteditable="true" class="feriado">24<br>Día Nacional de la Memoria</td>
-          <td contenteditable="true" class="practica">25<br>Limado C1<br>Teoría y Metrología</td>
-          <td contenteditable="true" class="practica" rowspan="2">26-27<br>Limado C2<br>Verif. perp.</td>
-          <td></td><td></td><td></td>
-        </tr>
-        <tr></tr>
-      `;
-    } else if (mesesNombres[m] === "Julio") {
-      tbody.innerHTML = `
-        <tr>
-          <td colspan="7" contenteditable="true" class="pia" rowspan="2">PIA / EMI (pre-receso)</td>
-        </tr>
-        <tr></tr>
-        <tr>
-          <td colspan="7" contenteditable="true" class="receso" rowspan="5">20 al 31 julio - Receso Escolar</td>
-        </tr>
-        <tr></tr><tr></tr><tr></tr><tr></tr>
-      `;
-    } else {
-      // Mes genérico
-      for (let s = 0; s < 6; s++) {
-        const tr = document.createElement('tr');
-        for (let d = 0; d < 7; d++) {
-          tr.innerHTML += '<td contenteditable="true"></td>';
-        }
-        tbody.appendChild(tr);
-      }
-    }
-
-    // Agregar select de color
-    const tds = tbody.querySelectorAll('td[contenteditable="true"]');
-    tds.forEach(td => agregarSelect(td));
-
-    mesDiv.appendChild(table);
-    mesesEl.appendChild(mesDiv);
-  }
-}
-
-// Cambio de año
-document.getElementById('anioSelect').onchange = function() {
-  generarCalendario(this.value);
-};
-
-// Inicial
-generarCalendario(2026);
-
-// Guardar / Descargar
-function guardarLocal() {
-  localStorage.setItem('calendario', document.body.innerHTML);
-  alert('Guardado en localStorage');
-}
-
-function descargar() {
-  const blob = new Blob([document.documentElement.outerHTML], {type: 'text/html'});
-  const url = URL.createObjectURL(blob);
-  const a = document.createElement('a');
-  a.href = url;
-  a.download = 'planificacion-taller.html';
-  a.click();
-}
-
-function agregarSelect(td) {
-  if (!td.querySelector('select.color-picker')) {
-    const sel = document.createElement('select');
-    sel.className = 'color-picker';
-    sel.innerHTML = `
-      <option value="">Color</option>
-      <option value="ajuste">Ajuste</option>
-      <option value="practica">Práctica</option>
-      <option value="pia">PIA</option>
-      <option value="apoyo">Apoyo</option>
-      <option value="receso">Receso</option>
-      <option value="feriado">Feriado</option>
-    `;
-    sel.onchange = () => td.className = sel.value;
-    td.appendChild(sel);
-  }
-}
-</script>
 </body>
 </html>
